styles/landingPage.module.scss
@import './styles/variables';
@import './styles/mediaQuery';

.fontAwesome {
  color: $font-secondary;
  &:hover {
    color: $font-secondary-hover;
  }
  &:active {
    color: $font-secondary-active;
  }
}

.scrollHelper {
  position: absolute;
  top: -130px;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.landing {
  margin-top: 130px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  &::after {
    content: '';
    background: url('/static/images/backgroundLogo.png') center no-repeat;
    position: absolute;
    width: 128px;
    height: 289px;
    top: 25%;
    transform: scale(1.8);
    z-index: -1;
  }
}

.lead {
  &__text {
    text-align: center;
    font-size: 1.3rem;
    line-height: 1.7rem;
    & > p {
      padding-top: 100px;
      &:first-child {
        padding-top: 20px;
      }
    }
  }
}

.bookBtn {
  font-size: 1.2rem;
  color: #fff;
  padding: 50px 60px;
  margin: 40px 0;
  border-radius: 10px;
  background-color: #000;
  box-shadow: $primary-shadow;
  &:hover {
    background-color: $font-primary-hover;
  }
}

.equipment {
  &__container {
    padding: 50px 0;
    width: 100vw;
  }
  &__content {
    max-width: $max-width;
    margin: 0 auto;
    display: flex;
    justify-content: space-around;
  }
  &__item {
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  &__desc {
    text-align: center;
    margin: 0;
    width: 300px;
    font-size: 1.2rem;
    line-height: 1.3rem;
    padding-top: 60px;
  }
  &__list {
    text-align: left;
    margin-left: 70px;
  }
}

.contact {
  width: $max-width;
  padding: 50px 0;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  font-size: 1.2rem;
  padding-bottom: 80px;
  text-align: center;

  &__column_title {
    font-size: 1.3rem;
    line-height: 28px;
    font-weight: 600;
  }

  &__column_content {
    font-size: 1rem;
    text-align: left;
  }

  &__tel {
    &_list {
      list-style: none;
      text-align: left;
      display: flex;
      flex-direction: column;
      gap: 35px;

      &Item {
        display: flex;
        align-items: center;
        gap: 30px;

        & > a {
          font-weight: 600;
          &:hover {
            color: $font-primary-hover;
          }
          &:active {
            color: $font-primary-active;
          }
        }
      }
    }
  }

  &__social {
    border-right: 1px solid #000;
    border-left: 1px solid #000;

    & > .contact__column_content {
      display: flex;
      align-items: center;
      justify-content: space-evenly;
      padding-top: 50px;
    }
  }

  &__address {
    & > .contact__column_content {
      padding-top: 30px;
      display: flex;
      align-items: center;
      gap: 30px;
      margin-left: 75px;
    }
  }
}

@include for-phone-only {
  .landing::after {
    top: 30%;
    transform: scale(1.5);
  }
  .lead {
    &__text {
      padding: 0 15px;
    }
  }

  .equipment {
    &__container {
      height: auto;
      padding: 0;
    }
    &__content {
      flex-direction: column;
    }
    &__item {
      padding: 30px 0;
    }
    &__desc {
      height: auto;
      padding-top: 40px;
    }
  }

  .contact {
    display: flex;
    flex-direction: column;
    justify-items: center;
    gap: 20px;
    padding-bottom: 30px;

    &__tel > .contact__column_content {
      margin-bottom: 35px;
    }

    &__social {
      border-right: none;
      border-left: none;

      & > .contact__column_content {
        padding-top: 30px;
      }
    }

    &__column {
      padding-bottom: 30px;
    }

    &__column_title {
      font-size: 1.2rem;
      line-height: 20px;
      font-weight: 600;
    }

    &__column_content {
      font-size: 1rem;
    }
  }
}

@include for-tablet-portrait {
  .lead__content {
    padding-left: 20px;
    padding-bottom: 50px;
  }
  .equipment {
    &__content {
      flex-direction: column;
    }
    &__item {
      padding: 30px 0;
    }
    &__desc {
      height: auto;
      padding-top: 40px;
    }
  }
  .contact__tel_list {
    padding: 0 10px;
  }
  .contact__address > .contact__column_content {
    margin-left: 10px;
  }
}

@include for-tablet-landscape {
  .landing::after {
    top: 30%;
    transform: scale(1.5);
  }

  .contact {
    margin-top: 150px;
  }
}

@include for-desktop {
  .landing::after {
    top: 20%;
    transform: scale(1.3);
  }

  .lead {
    &__text {
      font-size: 1.2rem;
      line-height: 1.5rem;
      & > p {
        padding-top: 50px;
        &:first-child {
          padding-top: 0;
        }
      }
    }
  }

  .bookBtn {
    font-size: 1.2rem;
    padding: 30px 35px;
    margin: 20px 0;
    background-color: black;
  }
}

